<?xml version="1.0" encoding="utf-8"?>

<!--
    Created By DevHyeon on 2020.11.21
    DevHyeon Blog : https://www.devhyeon.com
    DevHyeon Git  : https://github.com/DevHyeon0312
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 시계 -->
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="yyyy.MM.dd HH:mm:ss"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 내역 버튼 -->
    <Button
        android:id="@+id/btnUsage"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 입력된 값 -->
    <TextView
        android:id="@+id/tvInputData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|end"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/num0"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUsage" />

    <!-- 계산된 결과 값 -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/num0"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:gravity="bottom|end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 입력 버튼 -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNum7"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNum8"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNum9"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDivision"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDelete"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNum4"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNum5"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNum6"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiplication"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiplication"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNum1"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNum2"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNum3"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMinus"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNum0"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num0"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnPlus"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnResult"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>